Nouvelle version Api avec liquibase

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,3 +9,8 @@ spring.jpa.show-sql=true
 #Zone géographique
 spring.jackson.time-zone=Europe/Paris
 spring.jackson.locale=fr_FR
+
+spring.liquibase.enabled=true
+spring.application.name=test
+spring.liquibase.change-log=classpath:db/changelog/changelog-master.xml
+diffChangeLogFile= src/main/resources/liquibase-diff-changeLog.xml
